<resources>
    <string name="app_name">My Project</string>
    <string name="arabic" translatable="false">اللغة العربية</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="login_title">Login</string>
    <string name="welcome_back_text">Welcome back</string>
    <string name="login_instruction">Please enter your information below to log in</string>
    <string name="sign_in">Sign in</string>
    <string name="no_account_text">Do not have an account?</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="age_group">Age Group</string>
    <string name="young_adulthood1">Young</string>
    <string name="middle_age1">Middle</string>
    <string name="young_adulthood">Young Adulthood (Under 40)</string>
    <string name="middle_age">Middle Age (Under 60)</string>
    <string name="older">Older Adults</string>
    <string name="english" translatable="false">English Language</string>
    <string name="label_choose_language">Choose your preferred language</string>
    <string name="sign_up">Sign up</string>
    <string name="current_lang">English</string>
    <string name="password_hint">Password</string>
    <string name="create_new_account">Create New Account</string>
    <string name="contact_us">Contact Us</string>
    <string name="save_registration_info">Save Registration Info</string>
    <string name="email_hint">Email</string>
    <string name="please_select_account_type">Please select account type</string>
    <string name="invitation_code_hint">Invitation code</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="user_name">User Name</string>
    <string name="user">User</string>
    <string name="caregiver">Caregiver</string>
    <string name="ar" translatable="false">ar</string>
    <string name="en" translatable="false">en</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="reset_password_instruction">Please enter the email you used to register, and we\'ll send you a link to reset your password.</string>
    <string name="next">Next</string>
    <string name="need_assistance">Need assistance?</string>
    <string name="user_not_found">User not found</string>
    <string name="enter_email">Please enter your email</string>
    <string name="enter_valid_invitation">Please enter a valid invitation</string>
    <string name="enter_password">Please enter a password</string>
    <string name="select_age_group">Please select an age group</string>
    <string name="verify_email_password">Please verify your email and password</string>
    <string name="password_reset_email_sent">Password reset email sent successfully</string>
    <string name="password_reset_email_failed">Failed to send password reset email</string>
    <string name="pass_error">Please enter at least 6 letters or numbers</string>
    <string name="email_error">Please enter a valid email address</string>
    <string name="reset_password_success">Password reset email sent successfully</string>
    <string name="reset_password_failure">Failed to send password reset email</string>
    <string name="gender_selection">Gender Selection</string>
    <string name="profile_title">My Profile</string>
    <string name="home_title">Home</string>
    <string name="messages_title">Messages</string>
    <string name="points_text">Points</string>
    <string name="supporters_text">Supporters</string>
    <string name="emergency_help_text">Emergency</string>
    <string name="edit_profile_text">Edit Profile</string>
    <string name="profile_text">Profile</string>
    <string name="shared_media_text">Shared Media</string>
    <string name="settings_text">Settings</string>
    <string name="logout_text">Logout</string>
    <string name="help_text">How can I help you?</string>
    <string name="reviews_text">My Reviews</string>
    <string name="reports_text">My Reports</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="edit_profile_picture">Edit Profile Picture</string>
    <string name="dialect">Dialect</string>
    <string name="arabic_standard">Arabic (Standard)</string>
    <string name="religious_content">Do you want religious content?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enter_invitation">Please enter a valid invitation</string>
    <string name="enter_username">Please enter a username</string>
    <string name="select_gender">Please select gender</string>
    <string name="select_age_category">Please select age category</string>
    <string name="select_user_type">Please select user type</string>
    <string name="enter_the_new_name">Please enter the new name</string>
    <string name="the_username_has_been_changed_successfully">The username has been changed successfully</string>
    <string name="update_failed">Update failed</string>
    <string name="share_user_code">Share your user code with the person you want to be your supporter</string>
    <string name="copy_code">Copy Code</string>
    <string name="create_new_code">Create New Code</string>
    <string name="add_supporter">Add Supporter</string>
    <string name="supporter_code_is">The supporter\'s user code is</string>
    <string name="code_already_used">This code has been used, please create a new code</string>
    <string name="cannot_change_first_four">You cannot change the first four characters. Please enter four digits or letters only.</string>
    <string name="current_code_hint">Current Code</string>
    <string name="new_code_hint">New Code</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="enter_four_digits_or_letters">Please enter four characters</string>
    <string name="enter_new_code">Please enter a new code.</string>
    <string name="new_code_created_successfully">New code created successfully.</string>
    <string name="code_copied">Code copied successfully.</string>
    <string name="new_code_length_exceeded">The new code must not exceed 4 characters</string>
    <string name="no_supporters_text">You have not added any supporters yet</string>
    <string name="add_supporter_instruction">You can add one or more supporters (up to 3 supporters maximum)</string>
    <string name="understood">Okay</string>
    <string name="supporters_count">Number of Supporters</string>
    <string name="max_supporters_limit">The maximum limit for addition is 3 only. You cannot add more than 3 people as supporters</string>
    <string name="add_new_supporter_hint">If you want to add a supporter who has not been added to your account before, click here</string>
    <string name="add_new_supporter">Add New Supporter</string>
    <string name="restore_supporter_hint">If you want to restore a supporter that you have previously removed, click here</string>
    <string name="restore_supporter_with_account">Restore supporter has account</string>
    <string name="active">Active</string>
    <string name="not_active">Not Active</string>
    <string name="view_reports">View Reports</string>
    <string name="notifications">Notifications</string>
    <string name="view_daily_program_details">View Daily Program Details</string>
    <string name="view_mood_tracking_details">View Mood Tracking Details</string>
    <string name="allow_encouragement_reply">Allow Encouragement Reply</string>
    <string name="allow_video_voice_call">Allow Video/Voice Call</string>
    <string name="allow_private_messages">Allow Private Messages</string>
    <string name="allow_supporter_to">Allow supporter to</string>
    <string name="notification_type">Notification Type</string>
    <string name="daily_program_completion_notification">Supporter Notification on Completing Daily Program</string>
    <string name="mood_tracking_update_notification">Supporter Notification on Mood Tracking Update</string>
    <string name="psychological_test_result_notification">Supporter Notification on Psychological Test Result</string>
    <string name="report_type">Report Type</string>
    <string name="mood_report_only">Mood Report Only</string>
    <string name="psychological_test_report_only">Psychological Test Report Only</string>
    <string name="all">All</string>
    <string name="time_range">Time Range</string>
    <string name="annual_reports_only">Annual Reports Only</string>
    <string name="monthly_reports_only">Monthly Reports Only</string>
    <string name="weekly_reports_only">Weekly Reports Only</string>
    <string name="confirm_temporarily_suspend_supporter">Are you sure you want to temporarily suspend the supporter? This means the supporter will not be able to see any of your activities or reports until you unsuspend them.</string>
    <string name="suspend_temporarily">Suspend Temporarily</string>
    <string name="okay">Okay</string>
    <string name="choose_day">Choose Day</string>
    <string name="choose_the_day_you_would_like_to_plan">Choose the day you would like to plan</string>
    <string name="let_s_get_started">Let\'s get started</string>
    <string name="choose_activities">Choose activities</string>
    <string name="choose_your_daily_activity_you_can_choose_more_than_one_activity">Choose your daily activity. You can choose more than one activity</string>
    <string name="everything_is_ready_now_you_can_start_now">Everything is ready now, you can start now</string>
    <string name="great_job">Great job!</string>
    <string name="in_the_thought_restructuring">In the Thought Restructuring Café, we will walk you through how to help your loved one restructure their negative thoughts, enabling you to play a supportive and effective role, but in a safe and thoughtful manner. Our goal is not to replace a professional, but rather to be a conscious and supportive companion in a difficult moment, helping them see things from new perspectives and with a more balanced attitude.</string>
    <string name="when_your_loved_one_shares_their_troubling_thoughts_with_you_they_give_you_a_window_into_their_inner_world_therefore_we_strongly_recommend_following_the_steps_outlined_in_the_guide_to_ensure_you_provide_the_best_possible_support_in_a_safe_manner">When your loved one shares their troubling thoughts with you, they give you a window into their inner world. Therefore, we strongly recommend following the steps outlined in the guide to ensure you provide the best possible support in a safe manner.</string>
    <string name="this_exercise_is_intended_for_dealing_with_everyday_negative_thoughts_associated_with_depression_and_anxiety_not_for_acute_psychological_crises_if_you_notice_that_the_person_you_are_supporting">This exercise is intended for dealing with everyday negative thoughts associated with depression and anxiety, not for acute psychological crises. If you notice that the person you are supporting:</string>
    <string name="expresses_a_desire_to_harm_themselves_or_others">expresses a desire to harm themselves or others,</string>
    <string name="talks_about_suicide_or_a_complete_loss_of_interest_in_life">talks about suicide or a complete loss of interest in life,</string>
    <string name="exhibits_a_complete_detachment_from_reality_or_exhibits_severe_disturbing_behavioural_changes">exhibits a complete detachment from reality, or exhibits severe, disturbing behavioural changes,</string>
    <string name="this_is_an_indication">this is an indication that the situation requires immediate professional intervention. In this case, do not hesitate to contact a psychologist or emergency services.</string>
    <string name="your_support_is_important">Your support is important, but in some situations, professional support becomes an absolute necessity.</string>
    <string name="important">Important :</string>
</resources>