<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#3b4d59"
    android:layout_height="match_parent"
    tools:context=".users.caregiver.tools.cofe.presintaion.CofeInstructionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView32"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/image_lamp3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/margin_large"
            android:background="@drawable/background_instruction"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout23"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView32">

            <LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_medium"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:text="@string/note_before_you_begin"
        android:layout_gravity="center"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
android:text="@string/in_the_thought_restructuring"        android:layout_gravity="center"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
android:text="@string/when_your_loved_one_shares_their_troubling_thoughts_with_you_they_give_you_a_window_into_their_inner_world_therefore_we_strongly_recommend_following_the_steps_outlined_in_the_guide_to_ensure_you_provide_the_best_possible_support_in_a_safe_manner"        android:layout_gravity="center"
        android:layout_height="wrap_content"/>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="400dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:background="#fff9c5"
        android:padding="@dimen/padding_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:orientation="vertical"
        android:layout_height="400dp">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/important"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/this_exercise_is_intended_for_dealing_with_everyday_negative_thoughts_associated_with_depression_and_anxiety_not_for_acute_psychological_crises_if_you_notice_that_the_person_you_are_supporting"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:layout_gravity="center"
                android:src="@drawable/circle_gray"
                app:tint="#f4855e" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:text="@string/expresses_a_desire_to_harm_themselves_or_others"

                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:layout_gravity="center"
                android:src="@drawable/circle_gray"
                app:tint="#f4855e" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:text="@string/talks_about_suicide_or_a_complete_loss_of_interest_in_life"

                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:layout_gravity="center"
                android:src="@drawable/circle_gray"
                app:tint="#f4855e" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:text="@string/exhibits_a_complete_detachment_from_reality_or_exhibits_severe_disturbing_behavioural_changes"

                />
        </LinearLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/this_is_an_indication"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_support_is_important"/>


    </LinearLayout>


    <ImageView
        android:layout_width="64dp"
        android:layout_gravity="end"
        android:layout_height="64dp"
        android:scaleType="fitXY"
        android:src="@drawable/icon_pin"
        />
</FrameLayout>



</LinearLayout>




        </ScrollView>
        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:scaleType="fitXY"
            android:src="@drawable/icon_attached"
            android:layout_marginTop="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.563"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_super"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintNext"
                android:layout_width="100dp"
                android:layout_height="55dp"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_large"
                android:background="@drawable/corner_border_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/back"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/next"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="@dimen/margin_large"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textNext"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5"
                    app:srcCompat="@drawable/baseline_arrow_forward_24"
                    app:tint="@color/white" />

                <TextView
                    android:id="@+id/textNext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="@dimen/margin_small"
                android:background="@drawable/circle_with_border_white2"
                android:padding="@dimen/margin_medium"

                app:layout_constraintBottom_toBottomOf="@+id/constraintNext"
                app:layout_constraintEnd_toStartOf="@+id/constraintNext"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/constraintNext"
                app:layout_constraintVertical_bias="0.4"
                app:srcCompat="@drawable/baseline_arrow_back_24"
                app:tint="@color/white" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>