<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_large"
        android:background="@drawable/corner_large"
        android:backgroundTint="@color/white">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_close"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/circle_blue"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_close" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_add"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:tint="@color/shade_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ic_close"
            app:srcCompat="@drawable/ic_add" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="12dp"
            android:gravity="center"
            android:text="@string/add_new_supporter_hint"
            app:layout_constraintEnd_toEndOf="@+id/textView9"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/ic_add" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_addNew"
            style="@style/button_large"
            android:layout_width="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="0dp"
            android:backgroundTint="@color/shade_orange"
android:text="@string/add_new_supporter"
            app:layout_constraintEnd_toEndOf="@+id/bt_recovery"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/bt_recovery"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:gravity="center"
            android:text="@string/restore_supporter_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_addNew" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_recovery"
            style="@style/button_large"
            android:layout_width="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/background_screen"
            android:paddingStart="20dp"
          android:layout_marginBottom="50dp"
            android:paddingEnd="20dp"
            android:text="@string/restore_supporter_with_account"
            android:textColor="@color/medium_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>


